--- a/.env.testing
+++ b/.env.testing
@@ -23,21 +23,21 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=centralized_student_client_system_testing
+DB_DATABASE=laravel_test
 DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1200
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+CACHE_STORE=array
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
