--- a/.env.testing
+++ b/.env.testing
@@ -1,65 +1,57 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:Y22rf/bMJoaTrW59ydm+lSNI3sFTR8eBNQ7Ud648HbU=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
-
+# ----------------------------
+# Logging
+# ----------------------------
 LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_DEPRECATIONS_CHANNEL=null
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel_test
-DB_USERNAME=root
-DB_PASSWORD=
+# ----------------------------
+# Database (SAFE TEST SETUP)
+# ----------------------------
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=1200
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-
+# ----------------------------
+# Cache / Queue / Session
+# ----------------------------
 CACHE_STORE=array
-# CACHE_PREFIX=
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=array
+SESSION_LIFETIME=1200
 
-MEMCACHED_HOST=127.0.0.1
+# ----------------------------
+# Filesystem
+# ----------------------------
+FILESYSTEM_DISK=local
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
+# ----------------------------
+# Mail
+# ----------------------------
 MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS=hello@example.com
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+# ----------------------------
+# Broadcasting
+# ----------------------------
+BROADCAST_CONNECTION=log
 
+# ----------------------------
+# Redis / Memcached (Disabled)
+# ----------------------------
+REDIS_CLIENT=phpredis
+
+# ----------------------------
+# Vite
+# ----------------------------
 VITE_APP_NAME="${APP_NAME}"
